--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       </div>
       <script src="./lib/steelseries-min.js"></script>
       <script src="./lib/tween-min.js"></script>
-      <script src="bundle.js"></script>
-      <script type="text/javascript" src="./lib/jquery.sparkline.min.js"></script> 
+      <script src="./dist/bundle.js"></script>
+      <script type="text/javascript" src="./lib/jquery.sparkline.min.js"></script>
    </body>
 </html>
